# Rosfirmware

./: README.md
module_1_fundamentals/: README.md  theory_memory_registers_compilation.md
module_1_fundamentals/project/: CMakeLists.txt  arm_gcc_toolchain.cmake  linker_script.ld  main.c  startup.c
module_2_uart/: README.md  theory_interrupts_uart_fifo.md
module_2_uart/project/: CMakeLists.txt  main.c  startup.c  uart_driver.c  uart_driver.h
module_3_spi/: README.md  theory_spi_driver_architecture.md
module_3_spi/project/: CMakeLists.txt  display_driver.c  display_driver.h  main.c  spi_driver.c  spi_driver.h  startup.c
module_4_can/: README.md  theory_can_bus.md
module_4_can/project/: CMakeLists.txt  can_driver.c  can_driver.h  main.c  startup.c
module_5_rtos/: README.md  theory_rtos_scheduling.md
module_5_rtos/project/: CMakeLists.txt  main.c  rtos_kernel.c  rtos_kernel.h  startup.c
tests/: README.md  test_can.py  test_rtos.py  test_uart.py
